add emloyee folder that contains components for deleting, modifying and adding an employee & add Product folder that contains components for deleting, modifying and adding a Product & fix typo bugs

--- a/src/app/Components/Supplier/add-Supplier/add-supplier/add-supplier.component.html
+++ b/src/app/Components/Supplier/add-Supplier/add-supplier/add-supplier.component.html
@@ -1,5 +1,4 @@
 <section class="get-in-touch">
-
     <h3 class="title">Ajouter Supplier</h3>
     <div *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">
         {{errorMessage}}
@@ -29,8 +28,9 @@
         </div>
         <div class="form-field col-lg-12 ">
             <input class="submit-btn text-center" type="submit" value="Ajouter">
+
         </div>
-        <a routerLink="/user-list" class="backbutton">Back To List</a>
+        <a routerLink="/user-list" class="backbutton">Retourner</a>
 
     </form>
 </section>
