--- a/src/app/Components/Supplier/edit-Supplier/edit-supplier.component.css
+++ b/src/app/Components/Supplier/edit-Supplier/edit-supplier.component.css
@@ -11,11 +11,8 @@
     font-size: 3.2em;
     line-height: 48px;
     padding-bottom: 48px;
-    color: #5543ca;
-    background: #5543ca;
-    background: -moz-linear-gradient(left, var(--primary-color) 0%, #000000 100%) !important;
-    background: -webkit-linear-gradient(left, #f4524d 0%, #5543ca 100%) !important;
-    background: linear-gradient(to right, #f4524d 0%, #5543ca 100%) !important;
+    color: black;
+    background: black;
     -webkit-background-clip: text !important;
     -webkit-text-fill-color: transparent !important;
 }
@@ -30,7 +27,7 @@
     width: 100%;
     height: 36px;
     border-width: 0 0 2px 0;
-    border-color: #5543ca;
+    border-color: var(--main-bg-color);
     font-size: 18px;
     line-height: 26px;
     font-weight: 400;
@@ -53,7 +50,7 @@
     font-size: 18px;
     line-height: 26px;
     font-weight: 400;
-    color: #5543ca;
+    color: var(--main-bg-color);
     cursor: text;
     transition: -webkit-transform .2s ease-in-out;
     transition: transform .2s ease-in-out;
@@ -63,7 +60,6 @@
 .contact-form .submit-btn {
     display: inline-block;
     background-color: #000;
-    background-image: linear-gradient(125deg, #a72879, #064497);
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -72,4 +68,12 @@
     border: none;
     width: 200px;
     cursor: pointer;
+}
+
+.backbutton {
+    color: rgb(83, 81, 81);
+    text-decoration: underline;
+    display: block;
+    text-align: center;
+    margin-left: 1rem;
 }
