--- a/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.css
+++ b/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.css
@@ -23,3 +23,12 @@ p {
     justify-content: space-between;
     align-items: center;
 }
+
+.list-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.list-header input {
+    width: 30%;
+}
