--- a/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.html
+++ b/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.html
@@ -1,3 +1,12 @@
+<div class="list-header">
+    <input type="text" placeholder="Entre Nom" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+    <div>
+        <button class="btn btn-primary text-capitalize" [routerLink]="['/home/supplier/add']" style="margin-right: 1.7vw;">Ajouter un fournisseur</button>
+    </div>
+</div>
+
+
+
 <table class="table table-hover">
     <thead class="">
         <tr>
@@ -5,8 +14,7 @@
                 Nom complete
             </th>
             <th>
-                E-Mail
-            </th>
+                E-Mail </th>
             <th>
                 Address
             </th>
@@ -42,10 +50,10 @@
                 {{supplier.createDate}}
             </td>
             <td>
-                <button class="btn btn-danger" (click)="Delete(supplier.id)">supprimer</button>
+                <i (click)="Delete(supplier.id)" class=" fa fa-trash fa-lg  text-danger" aria-hidden="true" style="cursor: pointer;" aria-hidden="true "></i>
             </td>
             <td>
-                <button class="btn btn-success" (click)="update(supplier.id)">modifier</button>
+                <i (click)="update(supplier.id)" class=" fa fa-pencil fa-lg text-success " style="cursor: pointer; " aria-hidden="true "></i>
             </td>
         </tr>
 
