Category & Customer Component

--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -11,17 +11,23 @@
               <p>Home</p>
             </a>
           </li>
-          <li class="nav-item active drop_li" >
-            <a  class="nav-item active dropdown-header nav-link"  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="./user.html">
-              <i class="material-icons">person</i>
+
+
+          <li class="nav-item active">
+            <a class="nav-link"  routerLink="customer">
+                <i class="material-icons">person</i>
               <p>Client</p>
             </a>
-            <div class="dropdown-menu drop_li" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" routerLink="customer" >Ajoute</a>
-              <a class="dropdown-item" routerLink="customers">Lists</a>
-              <!-- <a class="dropdown-item" href="#"></a> -->
-            </div>
+         
           </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" routerLink="order">
+              <i class="material-icons">content_paste</i>
+              <p>Facture</p>
+            </a>
+          </li>
+
           <li class="nav-item ">
             <a class="nav-link" href="./tables.html">
               <i class="material-icons">content_paste</i>
