--- a/src/app/Components/Category/list-category/list-category.component.html
+++ b/src/app/Components/Category/list-category/list-category.component.html
@@ -1,1 +1,30 @@
-<p>list-category works!</p>
+<div class="container">
+    <div class="row my-5">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header text-center">Ajouter Category</div>
+                <div class="card-body text-center">
+                            <div class="form-group">
+                                <label for="">category</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                              </div>
+                              <input type="button" class="btn btn-primary" value="Valide">
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4  mx-3">
+            <table class="table">
+                <thead>
+                    <th>ID</th>
+                    <th>Name</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>Materia</td>
+                  </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>            
+</div>
