--- a/src/app/Components/Customer/list-customer/list-customer.component.html
+++ b/src/app/Components/Customer/list-customer/list-customer.component.html
@@ -1,1 +1,72 @@
-<p>list-customer works!</p>
+<div class="container">
+    <div class="row my-5">
+        <div class="col-lg-12 ">
+            <div class="main-box clearfix">
+                <div class="table-responsive">
+                    <a routerLink="add" class="btn btn-primary pull-right my-2">Ajouter Nouveau Client</a>
+                    <table class="table user-list">
+                        <thead>
+                            <tr>
+                                <th><span>User</span></th>
+                                <th><span>Email</span></th>
+                                <th><span>Adresse</span></th>
+                                <th><span>Telephone</span></th>
+                                <th><span>Ville</span></th>
+                                <th><span>Action</span></th>
+    
+    
+                                <th>&nbsp;</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                                    <span href="#" class="user-subhead font-weight-bold">Mila </span>
+                                    <span class="user-subhead">Kunis</span>
+                                </td>
+                                
+                                <td class="text-center">
+                                    <span class="label label-default">Ema@Gmail.com</span>
+                                </td>
+                                <td class="text-center">
+                                    <span class="label label-default">Ema@Gmail.com</span>
+                                </td>
+                                <td class="text-center">
+                                    <span class="label label-default">Ema@Gmail.com</span>
+                                </td>
+                                <td class="text-center">
+                                    <span class="label label-default">Ema@Gmail.com</span>
+                                </td>						
+                                <td style="width: 20%; ">
+                                    <a routerLink="edit/2" class="table-link ">
+                                        <span class="fa-stack">
+                                            <i class="fa fa-square fa-stack-2x"></i>
+                                            <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                        </span>
+                                    </a>
+                                    <a (click) = 'delete()' class="table-link danger">
+                                        <span class="fa-stack">
+                                            <i class="fa fa-square fa-stack-2x"></i>
+                                            <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
+                                        </span>
+                                    </a>
+
+                                    <a routerLink="orders/2" class="table-link">
+                                        <span class="fa-stack">
+                                            <i class="fa fa-square fa-stack-2x" style="color: rgb(39, 155, 39);"></i>
+                                            <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                                        </span>
+                                    </a>
+                                </td>
+                            </tr>
+                            
+        
+                        </tbody>
+                    </table>
+                </div>
+              
+            </div>
+        </div>
+    </div>
+    </div>
