--- a/src/app/Components/Category/list-category/list-category.component.css
+++ b/src/app/Components/Category/list-category/list-category.component.css
@@ -1,37 +1,17 @@
-body{
-    background:#f3c538;
+.delete{
+    background-color: rgb(216, 64, 64);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    color: white;
+    border-radius: 100%;
+    cursor: pointer;
 }
-.forget-pwd > a{
-    color: #dc3545;
-    font-weight: 500;
+
+.strong{
+    font-weight: bold;
+    /* font-weight: 200; */
 }
-.forget-password .panel-default{
-    padding: 31%;
-    margin-top: -27%;
-}
-.forget-password .panel-body{
-    padding: 15%;
-    margin-bottom: -50%;
-    background: #fff;
-    border-radius: 5px;
-    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-img{
-    width:40%;
-    margin-bottom:10%;
-}
-.btnForget{
-    background: #c0392b;
-    border:none;
-}
-.category .dropdown{
-    width: 100%;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-}
-.forget-password .dropdown button{
-    width: 100%;
-}
-.forget-password .dropdown ul{
-    width: 100%;
-}
+
