--- a/src/app/Components/Category/list-category/list-category.component.html
+++ b/src/app/Components/Category/list-category/list-category.component.html
@@ -2,29 +2,39 @@
     <div class="row my-5">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header text-center">Ajouter Category</div>
+                <h5 class="card-header text-center strong">Ajouter Category</h5>
                 <div class="card-body text-center">
-                            <div class="form-group">
-                                <label for="">category</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-                              </div>
-                              <input type="button" class="btn btn-primary" value="Valide">
+                   <form action="" [formGroup]='myForm'>
+                    <div class="form-group">
+                        <!-- <label for="">category</label> -->
+                        <input type="text" formControlName="name" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                    </div>
+                    <input type="button" class="btn btn-primary" (click)="add()" value="Valide" [disabled]="!myForm.valid">
+                   </form>
+
                 </div>
-              </div>
+            </div>
         </div>
-        <div class="col-md-4  mx-3">
+        <div class="card col-md-4  mx-3">
             <table class="table">
                 <thead>
                     <th>ID</th>
                     <th>Name</th>
+                    <th>Action</th>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>Materia</td>
-                  </tr>
+                    <tr *ngFor="let item of items">
+                        <td>{{ item.id }}</td>
+                        <td>{{ item.name }}</td>
+                        <td>
+                            <div (click)="delete(item.id)" class="ml-3 delete">
+                                <!-- <i class="fa fa-minus"></i> -->
+                                <i class="fa fa-trash"></i>
+                            </div>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
-    </div>            
+    </div>
 </div>
