--- a/src/app/Components/Customer/cust-order/cust-order.component.html
+++ b/src/app/Components/Customer/cust-order/cust-order.component.html
@@ -1,34 +1,48 @@
-<div class="container mb-5">
-    <button routerLink="add" class="btn btn-primary pull-right col-md-3 my-2">Ajouter Nouveau Facture</button>
-    <div class="d-flex justify-content-center row col-md-12 ">
-        <div class="col-md-10">
-            <h5 class="my-3">Factures</h5>
+<div class="container">
 
-            <div class="p-2 row bg-white border w-90">
-                <div class="col-md-5 mt-1">
-                    <h5 class="mt-3 strong">Client  : taah</h5>
-                    <div class="mt-4">
-                        <h5 class="strong">Nombre des produits : 7</h5>
-                    </div>
-                </div>
-                <div class=" col-md-3 border-left mt-1">
-                    <div class="d-flex flex-row align-items-center">
-                        <h4 class="mr-1 strong">Total : </h4>
-                        <p class="text-success mt-2">DH 13.99</p>
-                        <!-- <span class="strike-text">$20.99</span> -->
-                    </div>
-                    <!-- <h6 class="text-success">Free shipping</h6> -->
-                    <div class="d-flex flex-column mt-4">
-                        <button class="btn btn-primary btn-sm" routerLink="" type="button">Details</button>
-                    </div>
-                </div>
-                <div class="date col-md-2 ml-5">
-                    <h6 class="strong">Date De Facture :</h6>
-                    <h6 class="pull-right">12/12/2021</h6>
-                </div>
-            </div>
-
+    <div class="row py-3 my-2" >
+        <div class="input-group no-border col-md-5">
+            <!-- <input type="text" class="form-control" placeholder="Search..." name="firstname" id="firstname" [(ngModel)]="firstname" (ngModelChange)="Search()"> -->
+        </div>
+        <div class="col-md-3 mx-5"></div>
+        <div class="pull-right col-md-2 ">
+            <a routerLink="add" class=" btn btn-primary ">Nouvelle facture</a>
 
         </div>
+
     </div>
+
+        <div class="row col-md-12">
+            <div class="col-lg-4" *ngFor="let item of data | paginate: { itemsPerPage: 6, currentPage: p }">
+                <div class="card card-margin">
+                    <div class="card-header no-border">
+                        <span class="card-title"> {{ item.customer.firstname }} {{ item.customer.lastname }}</span>
+                    </div>
+                    <div class="card-body pt-0">
+                        <div class="widget-49">
+                            <div class="widget-49-title-wrapper mb-2">
+                                <div class="widget-49-date-primary p-2 text-center">
+                                    <span class="widget-49-date-day date">{{ item.orderDate | date }}</span>
+                                </div>
+                                <div class="">
+                                    <!-- <span class="widget-49-pro-title">7 produits</span> -->
+                                    <span class="widget-49-meeting-time strong mx-3"> total :</span> <span class="price">{{ item.total }} DH</span>
+                                </div>
+                            </div>
+                           
+                            <div class="widget-49-meeting-action ">
+                                <a routerLink="details/2" class="btn btn-sm btn-flash-border-primary col-12">View All</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            <pagination-controls (pageChange)="p = $event"></pagination-controls>   
+
+        </div>
+
+
+
+
 </div>
