--- a/src/app/Components/Customer/list-customer/list-customer.component.html
+++ b/src/app/Components/Customer/list-customer/list-customer.component.html
@@ -1,10 +1,21 @@
 <div class="container">
-    <div class="row my-5">
+    <div class="row ">
         <div class="col-lg-12 ">
             <div class="main-box clearfix">
                 <div class="table-responsive">
-                    <a routerLink="add" class="btn btn-primary pull-right my-2">Ajouter Nouveau Client</a>
-                    <table class="table user-list">
+                    <div class="row py-3 my-2" >
+                        <div class="input-group no-border col-md-5">
+                            <input type="text" class="form-control" placeholder="Search..." name="firstname" id="firstname" [(ngModel)]="firstname" (ngModelChange)="Search()">
+                        </div>
+                        <div class="col-md-3 mx-5"></div>
+                        <div class="pull-right col-md-2 ">
+                            <a routerLink="add" class=" btn btn-primary ">Nouveau client</a>
+
+                        </div>
+
+                    </div>
+                        
+                    <table class="table user-list ">
                         <thead>
                             <tr>
                                 <th><span>User</span></th>
@@ -13,46 +24,43 @@
                                 <th><span>Telephone</span></th>
                                 <th><span>Ville</span></th>
                                 <th><span>Action</span></th>
-    
-    
-                                <th>&nbsp;</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr *ngFor="let item of items | paginate: { itemsPerPage: 5, currentPage: p };">
                                 <td>
                                     <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-                                    <span href="#" class="user-subhead font-weight-bold">Mila </span>
-                                    <span class="user-subhead">Kunis</span>
+                                    <span href="#" class="user-subhead font-weight-bold">{{ item.firstname }}</span><br>
+                                    <span class="user-subhead">{{ item.lastname }}</span>
                                 </td>
-                                
+
                                 <td class="text-center">
-                                    <span class="label label-default">Ema@Gmail.com</span>
-                                </td>
-                                <td class="text-center">
-                                    <span class="label label-default">Ema@Gmail.com</span>
+                                    <span class="label label-default">{{ item.email }}</span>
                                 </td>
                                 <td class="text-center">
-                                    <span class="label label-default">Ema@Gmail.com</span>
+                                    <span class="label label-default">{{ item.address }}</span>
                                 </td>
                                 <td class="text-center">
-                                    <span class="label label-default">Ema@Gmail.com</span>
-                                </td>						
+                                    <span class="label label-default">{{ item.phone }}</span>
+                                </td>
+                                <td class="text-center">
+                                    <span class="label label-default">{{ item.city }}</span>
+                                </td>
                                 <td style="width: 20%; ">
-                                    <a routerLink="edit/2" class="table-link ">
+                                    <a [routerLink]="['edit/',item.id]" class="table-link ">
                                         <span class="fa-stack">
                                             <i class="fa fa-square fa-stack-2x"></i>
                                             <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                                         </span>
                                     </a>
-                                    <a (click) = 'delete()' class="table-link danger">
+                                    <a (click)='delete(item.id)' class="table-link danger">
                                         <span class="fa-stack">
                                             <i class="fa fa-square fa-stack-2x"></i>
                                             <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
                                         </span>
                                     </a>
 
-                                    <a routerLink="orders/2" class="table-link">
+                                    <a [routerLink]="['orders/',item.id]" class="table-link">
                                         <span class="fa-stack">
                                             <i class="fa fa-square fa-stack-2x" style="color: rgb(39, 155, 39);"></i>
                                             <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -60,13 +68,14 @@
                                     </a>
                                 </td>
                             </tr>
-                            
-        
+
+
                         </tbody>
                     </table>
+                    <pagination-controls (pageChange)="p = $event"></pagination-controls>   
                 </div>
-              
+
             </div>
         </div>
     </div>
-    </div>
+</div>
