--- a/src/app/Components/order/ligne/ligne.component.html
+++ b/src/app/Components/order/ligne/ligne.component.html
@@ -18,8 +18,8 @@
                             <input type="number" formControlName="quantity" (change)="change()" name="" class="form-control" placeholder="00" />
                         </div>
                         <div class="form-group col-md-2">
-                            <label for="">Prix HT</label>
-                            <input type="number"formControlName="prixht" (change)="change()" name="" class="form-control" placeholder="00" />
+                            <label for="">Prix</label>
+                            <input type="number"formControlName="prix" (change)="change()" name="" class="form-control" placeholder="00" />
                         </div>
                         <div class="form-group col-md-2">
                             <label for="">TVA</label>
