--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -3,17 +3,20 @@
         <div class="logo"><a href="http://www.creative-tim.com" class="simple-text logo-normal">
           Creative Tim
         </a></div>
+
+        
+
       <div class="sidebar-wrapper">
         <ul class="nav">
-          <li class="nav-item  ">
-            <a class="nav-link" href="./dashboard.html">
+          <li class="nav-item"  [ngClass]="{'active': tabActive === 1}" (click)="switch(1)">
+            <a class="nav-link" >
               <i class="material-icons">dashboard</i>
               <p>Home</p>
             </a>
           </li>
 
 
-          <li class="nav-item active">
+          <li class="nav-item " [ngClass]="{'active': tabActive === 2}" (click)="switch(2)">
             <a class="nav-link"  routerLink="customer">
                 <i class="material-icons">person</i>
               <p>Client</p>
@@ -21,7 +24,7 @@
          
           </li>
 
-          <li class="nav-item ">
+          <li class="nav-item " [ngClass]="{'active': tabActive === 3}" (click)="switch(3)">
             <a class="nav-link" routerLink="order">
               <i class="material-icons">content_paste</i>
               <p>Facture</p>
