add crud for supplier and emplyee & configure routing

--- a/src/app/Components/Employee/list-employee/list-employee.component.html
+++ b/src/app/Components/Employee/list-employee/list-employee.component.html
@@ -12,7 +12,7 @@
                 <small class="text-danger" *ngIf="form.get('password').invalid && form.get('password').touched && form.get('password').value!==''"> Entre 8 Character </small>
             </div>
             <div class="col">
-                <select class="form-control">
+                <select formControlName="role" class="form-control">
                   <option >admin</option>
                   <option>secretaire</option>                
                 </select>
