--- a/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.html
+++ b/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.html
@@ -33,7 +33,8 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let supplier of listSupplier">
+        <tr *ngFor="let supplier of listSupplier | paginate: { itemsPerPage: 8, 
+            currentPage: p,totalItems: listSupplier.length }">
             <td>
                 {{supplier.firstname | uppercase }}{{ " " + supplier.lastname }}
             </td>
@@ -47,7 +48,7 @@
                 {{supplier.phone}}
             </td>
             <td>
-                {{supplier.createDate}}
+                {{supplier.createDate | date:'MM-dd-yyy'}}
             </td>
             <td>
                 <i (click)="Delete(supplier.id)" class=" fa fa-trash fa-lg  text-danger" aria-hidden="true" style="cursor: pointer;" aria-hidden="true "></i>
@@ -56,6 +57,6 @@
                 <i (click)="update(supplier.id)" class=" fa fa-pencil fa-lg text-success " style="cursor: pointer; " aria-hidden="true "></i>
             </td>
         </tr>
-
     </tbody>
 </table>
+<pagination-controls directionLinks="true" previousLabel="" nextLabel='' (pageChange)="pagechangeHandler($event) "></pagination-controls>
