add product service & integrate retrive all product & add pagination for employee , product ,supplier

--- a/src/app/Components/Employee/list-employee/list-employee.component.css
+++ b/src/app/Components/Employee/list-employee/list-employee.component.css
@@ -20,3 +20,14 @@ select {
 .btn {
     margin-top: 0;
 }
+
+.ngx-pagination {
+    padding-left: 0px !important;
+    text-align: center;
+}
+
+.ngx-pagination .current,
+.btn-info {
+    background: rgb(172, 25, 173) !important;
+    border-radius: 20px !important;
+}
