--- a/src/app/Components/Employee/list-employee/list-employee.component.html
+++ b/src/app/Components/Employee/list-employee/list-employee.component.html
@@ -36,7 +36,8 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let employee of listEmployee; let i = index" style="cursor: pointer;" (dblclick)="fill(i)">
+        <tr *ngFor="let employee of listEmployee |paginate: { itemsPerPage: 8, 
+            currentPage: p,totalItems: listEmployee.length }; let i = index" style="cursor: pointer;" (dblclick)="fill(i)">
             <th scope="row">{{i+1}}</th>
             <td>{{employee.name | titlecase}}</td>
             <td>{{employee.password}}</td>
@@ -45,3 +46,4 @@
         </tr>
     </tbody>
 </table>
+<pagination-controls directionLinks=" true " previousLabel=" " nextLabel='' (pageChange)="pagechangeHandler($event) "></pagination-controls>
