--- a/src/app/Components/Product/list-product/list-product.component.css
+++ b/src/app/Components/Product/list-product/list-product.component.css
@@ -18,3 +18,14 @@ thead {
 .img {
     height: 4rem;
 }
+
+.ngx-pagination {
+    padding-left: 0px !important;
+    text-align: center;
+}
+
+.ngx-pagination .current,
+.btn-info {
+    background: rgb(172, 25, 173) !important;
+    border-radius: 20px !important;
+}
