--- a/src/app/Components/Supplier/add-Supplier/add-supplier/add-supplier.component.html
+++ b/src/app/Components/Supplier/add-Supplier/add-supplier/add-supplier.component.html
@@ -30,9 +30,8 @@
             <div class="form-field col-lg-12 ">
                 <input class="submit-btn text-center text-capitalize" type="submit" value="Ajouter">
                 <input class="submit-btn text-center text-capitalize ml-3" style="background-color: aliceblue; color: rgb(172, 25, 173);" type="reset" value="Vide">
-
             </div>
-            <a routerLink="/suppliers" class="backbutton text-left ">Retourner</a>
+            <a routerLink="/home/suppliers" class="backbutton text-left ">Retourner</a>
         </form>
     </section>
 </div>
