add confiramtion alert to supplier and product in the proccess of adding & enhance code perfermance & imporve code readiblity & fix bugs

--- a/src/app/Components/Employee/list-employee/list-employee.component.html
+++ b/src/app/Components/Employee/list-employee/list-employee.component.html
@@ -37,7 +37,7 @@
     </thead>
     <tbody>
         <tr *ngFor="let employee of listEmployee |paginate: { itemsPerPage: 8, 
-            currentPage: p,totalItems: listEmployee.length }; let i = index" style="cursor: pointer;" (dblclick)="fill(i)">
+            currentPage: p,totalItems: listEmployee?.length }; let i = index" style="cursor: pointer;" (dblclick)="fill(i)">
             <th scope="row">{{i+1}}</th>
             <td>{{employee.name | titlecase}}</td>
             <td>{{employee.password}}</td>
