--- a/src/app/Components/Product/add-Product/add-product.component.css
+++ b/src/app/Components/Product/add-Product/add-product.component.css
@@ -5,4 +5,12 @@ h3 {
 .add-container {
     width: 90%;
     margin: auto;
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: 1rem;
+}
+
+textarea {
+    border: 1px rgb(221, 221, 221) solid;
+    padding: 1rem;
 }
