--- a/src/app/Components/Product/add-Product/add-product.component.html
+++ b/src/app/Components/Product/add-Product/add-product.component.html
@@ -3,38 +3,43 @@
     <div class="container contact-form">
         <form [formGroup]="form" (ngSubmit)="addProduct()">
             <h3 class="text-center" style="margin-bottom: 2rem;">Ajouter Un Produit</h3>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input type="text" name="name" class="form-control" placeholder="Nom" formControlName="name" />
-                        <small class="text-danger" *ngIf="form.get('name').errors?.required && form.get('name').touched">Cette champ est obligatoire</small>
-                        <small class="text-danger" *ngIf="form.get('name').invalid && form.get('name').touched && form.get('name').value!==''">Value est invalid</small>
+            <div *ngIf="isAdedd" class=" alert alert-success " role="alert ">
+                {{ErrorMessage}}
+            </div>
+            <div class="row ">
+                <div class="col-md-6 ">
+                    <div class="form-group ">
+                        <input type="text " name="name" class="form-control " placeholder="Nom " formControlName="name" />
+                        <small class="text-danger " *ngIf="form.get( 'name').errors?.required && form.get( 'name').touched ">Cette champ est obligatoire</small>
+                        <small class="text-danger " *ngIf="form.get( 'name').invalid && form.get( 'name').touched && form.get( 'name').value!=='' ">Value est invalid</small>
                     </div>
                     <div class="form-group ">
-                        <input type="text" name="Prix" class="form-control " placeholder="Prix" formControlName="Prix" />
-                        <small class="text-danger" *ngIf="form.get('Prix').errors?.required && form.get('Prix').touched">Cette champ est obligatoire </small>
-                        <small class="text-danger" *ngIf="form.get('Prix').invalid && form.get('Prix').touched && form.get('Prix').value!==''">Value est invalid</small>
+                        <input type="text " name="price" class="form-control " placeholder="Prix " formControlName="price" />
+                        <small class="text-danger " *ngIf="form.get( 'price').errors?.required && form.get( 'price').touched ">Cette champ est obligatoire </small>
+                        <small class="text-danger " *ngIf="form.get( 'price').invalid && form.get( 'price').touched && form.get( 'price').value!=='' ">Value est invalid</small>
                     </div>
-                    <div class="form-group">
-                        <input type="number" name="quantityStock" class="form-control" placeholder="quantityStock" formControlName="quantityStock" />
-                        <small class="text-danger" *ngIf="form.get('quantityStock').errors?.required && form.get('quantityStock').touched">Cette champ est obligatoire</small>
-                        <small class="text-danger" *ngIf="form.get('quantityStock').invalid && form.get('quantityStock').touched && form.get('quantityStock').value!==''">Value est invalid</small>
+                    <div class="form-group ">
+                        <input type="number" name="quantityStock " class="form-control " placeholder="Qunatite en stock" formControlName="quantityStock" />
+                        <small class="text-danger " *ngIf="form.get( 'quantityStock').errors?.required && form.get( 'quantityStock').touched ">Cette champ est obligatoire</small>
+                        <small class="text-danger " *ngIf="form.get( 'quantityStock').invalid && form.get( 'quantityStock').touched && form.get( 'quantityStock').value!=='' ">Value est invalid</small>
                     </div>
 
                     <div class="form-group ">
-                        <select name="Category" class="form-select form-select-lg mb-3 " aria-label=".form-select-lg example" formControlName="Category">
-                        <option *ngFor="let c of listCategory" [ngValue]="c.id">{{c.name}}</option>
+                        <select name="category" class="form-select form-select-lg mb-3 " aria-label=".form-select-lg example " formControlName="category">
+                        <option *ngFor="let c of listCategory " [ngValue]="c.id ">{{c.name}}</option>
                       </select>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <textarea name="description" class="form-control" rows="9" placeholder="Description" formControlName="description"></textarea>
+                <div class="col-md-6 ">
+                    <div class="form-group ">
+                        <textarea name="description" class="form-control " rows="9 " placeholder="Description " formControlName="description"></textarea>
                     </div>
                 </div>
                 <div>
-                    <input type="submit" class="btn btn-primary text-capitalize " value="Ajouter " style="cursor: pointer; width: 20%;">
+                    <input type="submit" [disabled]="!form.valid" class="btn btn-primary text-capitalize " value="Ajouter " style="cursor: pointer; width: 20%; ">
+                    <input type="reset" class="btn btn-default text-capitalize" value="Vide" style="cursor: pointer; width: 20%; margin-left: 1rem; ">
                 </div>
+                <a routerLink="/home/products" class="link-info  text-capitalize" style="color: rgb(172, 25, 173); margin-top: 1rem">Reteunir a la List</a>
             </div>
         </form>
     </div>
