--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,75 +1,70 @@
-<div class="wrapper ">
+<div class="wrapper" style="background-color: white;">
     <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
         <div class="logo"><a href="http://www.creative-tim.com" class="simple-text logo-normal">
           Creative Tim
         </a></div>
+        <div class="sidebar-wrapper">
+            <ul class="nav">
+                <li class="nav-item" [ngClass]="{'active': tabActive === 1}" (click)="switch(1)">
+                    <a class="nav-link">
+                        <i class="material-icons">dashboard</i>
+                        <p>Home</p>
+                    </a>
+                </li>
+                <li class="nav-item " [ngClass]="{'active': tabActive === 2}" (click)="switch(2)">
+                    <a class="nav-link" routerLink="customer">
+                        <i class="material-icons">person</i>
+                        <p>Client</p>
+                    </a>
 
-        
+                </li>
 
-      <div class="sidebar-wrapper">
-        <ul class="nav">
-          <li class="nav-item"  [ngClass]="{'active': tabActive === 1}" (click)="switch(1)">
-            <a class="nav-link" >
-              <i class="material-icons">dashboard</i>
-              <p>Home</p>
-            </a>
-          </li>
+                <li class="nav-item " [ngClass]="{'active': tabActive === 3}" (click)="switch(3)">
+                    <a class="nav-link" routerLink="order">
+                        <i class="material-icons">content_paste</i>
+                        <p>Facture</p>
+                    </a>
+                </li>
 
+                <li class="nav-item ">
+                    <a class="nav-link" href="./tables.html">
+                        <i class="material-icons">content_paste</i>
+                        <p>Table List</p>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="./typography.html">
+                        <i class="material-icons">library_books</i>
+                        <p>Typography</p>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="./icons.html">
+                        <i class="material-icons">bubble_chart</i>
+                        <p>Icons</p>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="./map.html">
+                        <i class="material-icons">location_ons</i>
+                        <p>Maps</p>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="./notifications.html">
+                        <i class="material-icons">notifications</i>
+                        <p>Notifications</p>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="./rtl.html">
+                        <i class="material-icons">language</i>
+                        <p>RTL Support</p>
+                    </a>
+                </li>
 
-          <li class="nav-item " [ngClass]="{'active': tabActive === 2}" (click)="switch(2)">
-            <a class="nav-link"  routerLink="customer">
-                <i class="material-icons">person</i>
-              <p>Client</p>
-            </a>
-         
-          </li>
-
-          <li class="nav-item " [ngClass]="{'active': tabActive === 3}" (click)="switch(3)">
-            <a class="nav-link" routerLink="order">
-              <i class="material-icons">content_paste</i>
-              <p>Facture</p>
-            </a>
-          </li>
-
-          <li class="nav-item ">
-            <a class="nav-link" href="./tables.html">
-              <i class="material-icons">content_paste</i>
-              <p>Table List</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./typography.html">
-              <i class="material-icons">library_books</i>
-              <p>Typography</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./icons.html">
-              <i class="material-icons">bubble_chart</i>
-              <p>Icons</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./map.html">
-              <i class="material-icons">location_ons</i>
-              <p>Maps</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./notifications.html">
-              <i class="material-icons">notifications</i>
-              <p>Notifications</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./rtl.html">
-              <i class="material-icons">language</i>
-              <p>RTL Support</p>
-            </a>
-          </li>
-          
-        </ul>
-      </div>
+            </ul>
+        </div>
     </div>
     <div class="main-panel">
         <!-- Navbar -->
