--- a/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.css
+++ b/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.css
@@ -23,3 +23,23 @@ p {
     justify-content: space-between;
     align-items: center;
 }
+
+.list-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.list-header input {
+    width: 30%;
+}
+
+.ngx-pagination {
+    padding-left: 0px !important;
+    text-align: center;
+}
+
+.ngx-pagination .current,
+.btn-info {
+    background: rgb(172, 25, 173) !important;
+    border-radius: 20px !important;
+}
