--- a/src/app/Components/Product/list-product/list-product.component.html
+++ b/src/app/Components/Product/list-product/list-product.component.html
@@ -1,4 +1,4 @@
-<section class="ftco-section">
+<section class="ftco-section mt-5">
     <div class="container">
         <div class="row justify-content-center">
         </div>
@@ -6,38 +6,35 @@
             <div class="col-md-12">
                 <div class="table-wrap">
                     <table class="table">
-                        <thead class="thead-primary">
+                        <thead class="thead-primary" style="background-color: rgb(173, 5, 173);">
                             <tr>
                                 <th>&nbsp;</th>
-                                <th>Product</th>
-                                <th>Price</th>
+                                <th>Produit</th>
+                                <th>Prix</th>
                                 <th>Quantity en stock </th>
                                 <th>&nbsp;</th>
                                 <th>&nbsp;</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let product of listProduct" class="alert" role="alert">
+                            <tr *ngFor="let product of listProduct | paginate: { itemsPerPage: 8, 
+                                currentPage: p,totalItems: listProduct.length }" class="alert" role="alert">
                                 <td>
-                                    <img class="img" [src]="product.image" alt="Proudct image">
+                                    <img class="img" [src]="product.image" [alt]="product.name">
                                 </td>
                                 <td class="border-bottom-0">
                                     <div class="email">
-                                        <span>{{product.name}} </span>
-                                        <span>{{product.description}}</span>
+                                        <span>{{product.name | titlecase}} </span>
+                                        <span>{{product.description | titlecase}}</span>
                                     </div>
                                 </td>
-                                <td class="border-bottom-0">{{product.price}}}</td>
-                                <td class="border-bottom-0">{{product.Category}}}</td>
+                                <td class="border-bottom-0">{{product.price | number:'.1-3'}} Dhs</td>
+                                <td class="border-bottom-0">{{product.quantityStock}}</td>
                                 <td class="border-bottom-0">
-                                    <button type="button" class="close" (click)="delete(product.id)">
-                                                <span ><i class="fa fa-close"></i></span>
-                                                </button>
+                                    <i (click)="delete(product.id)" style="cursor: pointer;" class=" fa fa-trash fa-lg"></i>
                                 </td>
                                 <td class="border-bottom-0">
-                                    <button type="button" class="close" (click)="update(product.id)">
-                                                <span ><i class="fa fa-close"></i></span>
-                                                </button>
+                                    <i (click)="update(product.id)" style="cursor: pointer;" class="fa fa-pencil fa-lg"></i>
                                 </td>
                             </tr>
                         </tbody>
@@ -47,3 +44,4 @@
         </div>
     </div>
 </section>
+<pagination-controls directionLinks=" true " previousLabel=" " nextLabel='' (pageChange)="pagechangeHandler($event) "></pagination-controls>
