--- a/src/app/Components/order/add-order/add-order.component.html
+++ b/src/app/Components/order/add-order/add-order.component.html
@@ -1,6 +1,20 @@
-<div class="container">
+<div class="container home">
+
+    <div class="valide card p-5" *ngIf="opValide">
+         
+        <h3>Votre facture est prête ?</h3>
+        <div class="action ">
+            
+            <button class="btn">envoyer au client</button>
+            <button class="btn" (click)='imprimer()'>Imprimer</button>
+            <button class="btn btn-danger pull-right" (click)='fermer()'>Fermer</button>
+        </div>
+
+    </div>
+
+
     <form action="" [formGroup]="myForm">
-       <div class="row">
+       <div class="row" [ngClass]="{'background':opValide}">
            <div class="col-md-7">
                <h4>Client</h4>
                <div class="form-group">
