--- a/src/app/Components/order/list-order/list-order.component.html
+++ b/src/app/Components/order/list-order/list-order.component.html
@@ -14,6 +14,7 @@
 
         <div class="row col-md-12">
             <div class="col-lg-4" *ngFor="let item of data | paginate: { itemsPerPage: 6, currentPage: p }">
+
                 <div class="card card-margin">
                     <div class="card-header no-border">
                         <span class="card-title"> {{ item.customer.firstname }} {{ item.customer.lastname }}</span>
@@ -31,7 +32,7 @@
                             </div>
                            
                             <div class="widget-49-meeting-action ">
-                                <a routerLink="details/2" class="btn btn-sm btn-flash-border-primary col-12">View All</a>
+                                <a routerLink="details/{{ item.id }}" class="btn btn-sm btn-flash-border-primary col-12">View All</a>
                             </div>
                         </div>
                     </div>
