--- a/src/app/Components/order/add-order/add-order.component.css
+++ b/src/app/Components/order/add-order/add-order.component.css
@@ -76,3 +76,21 @@ h4{
    font-weight: bold;
    font-size: 15px;
 }
+
+.home{
+  position: relative;
+}
+
+.valide{
+  background-color: white;
+  position:absolute;
+  top: 60%;
+  z-index: 10;
+
+}
+.background {
+  filter: blur(4px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
