--- a/src/app/Components/order/detail-order/detail-order.component.html
+++ b/src/app/Components/order/detail-order/detail-order.component.html
@@ -1,80 +1,87 @@
 <div class="container mt-5 mb-5">
+    <div class="">
+            
+            <div class="row">
+                <div class="col-md-3 my-3">
+                    <h3>Informations</h3>
+                </div>
+                <div class="col-md-6"></div>
+                <div class="col-md-3 mt-4 strong">
+                    {{ data?.orderDate  | date}}
+                </div>    
+            </div>
+            
+            <div class="col-md-5">
+                <span class="mr-3 strong">Destinataire    :</span> <span class="mr-2">{{ data.customer?.firstname }} {{ data.customer?.lastname }}</span><br>
+                <span class="mr-3 strong">Adresse    :</span> <span class="mr-2">{{ data.customer?.address }}</span><br>
+                <span class="mr-3 strong">Adresse email    :</span> <span class="mr-2">{{ data.customer?.email }}</span><br>
+            </div>
+
+            
+    </div>
+
+
+
     <div class="d-flex justify-content-center row">
-        <div class="col-md-10">
-            <div class="row p-2 bg-white border rounded">
-                <!-- <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/QpjAiHq.jpg"></div> -->
-                <div class="col-md-6 mt-1">
-                    <h5>Quant olap shirts</h5>
-                    <div class="d-flex flex-row">
-                        <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>310</span>
-                    </div>
-                    <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
-                    <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
-                    <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
-                </div>
-                <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-                    <div class="d-flex flex-row align-items-center">
-                        <h4 class="mr-1">$13.99</h4><span class="strike-text">$20.99</span>
-                    </div>
-                    <h6 class="text-success">Free shipping</h6>
-                    <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
-                </div>
-            </div>
-            <div class="row p-2 bg-white border rounded mt-2">
-                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/JvPeqEF.jpg"></div>
-                <div class="col-md-6 mt-1">
-                    <h5>Quant trident shirts</h5>
-                    <div class="d-flex flex-row">
-                        <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>310</span>
-                    </div>
-                    <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
-                    <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
-                    <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
-                </div>
-                <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-                    <div class="d-flex flex-row align-items-center">
-                        <h4 class="mr-1">$14.99</h4><span class="strike-text">$20.99</span>
-                    </div>
-                    <h6 class="text-success">Free shipping</h6>
-                    <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
-                </div>
-            </div>
-            <div class="row p-2 bg-white border rounded mt-2">
-                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/Bf4dIaN.jpg"></div>
-                <div class="col-md-6 mt-1">
-                    <h5>Quant ruybi shirts</h5>
-                    <div class="d-flex flex-row">
-                        <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>123</span>
-                    </div>
-                    <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
-                    <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
-                    <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
-                </div>
-                <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-                    <div class="d-flex flex-row align-items-center">
-                        <h4 class="mr-1">$13.99</h4><span class="strike-text">$20.99</span>
-                    </div>
-                    <h6 class="text-success">Free shipping</h6>
-                    <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
+        <h3 class="ml-5 my-3">Détail</h3>
+        <!-- <div class="col-md-10" *ngIf="data.orderProducts?.length>0"> 
+        </div> -->
+
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="table-wrap">
+                    <table class="table">
+                        <thead class="thead-primary" style="background-color: rgb(173, 5, 173);">
+                            <tr>
+                                <th>&nbsp;</th>
+                                <th>Produit</th>
+                                <th>Description</th>
+                                <th>Prix unitaire HT</th>
+                                <th>Quantité</th>
+                                <th>Total HT</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of data.orderProducts" class="alert" role="alert">
+                                <td>
+                                    <!-- <img class="img" [src]="product.image" [alt]="product.name"> -->
+                                </td>
+
+                                <td class="border-bottom-0">
+                                        {{item.product.name | titlecase}} 
+                                </td>
+                                <td class="border-bottom-0">
+                                    {{item.product.description | titlecase}}
+
+                                </td>
+                                <td class="border-bottom-0">{{item.prixHt | number:'.1-3'}} Dhs</td>
+                                <td class="border-bottom-0">{{item.quantity}}</td>
+                                <td class="border-bottom-0">{{item.totalHT}}</td>
+
+                              
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
-            <div class="row p-2 bg-white border rounded mt-2">
-                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg"></div>
-                <div class="col-md-6 mt-1">
-                    <h5>Quant tinor shirts</h5>
-                    <div class="d-flex flex-row">
-                        <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>110</span>
+
+
+            
+        </div>
+
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="col-md-6 totals text-right">
+                <div class="row  ">
+                    <div class="col-md-3">
+                    <h4 class="strong">Total HT</h4> 
+                    <h4 class="strong">Total TTC</h4> 
                     </div>
-                    <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
-                    <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
-                    <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
-                </div>
-                <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-                    <div class="d-flex flex-row align-items-center">
-                        <h4 class="mr-1">$15.99</h4><span class="strike-text">$21.99</span>
+                    <div class="col-md-3">
+                        <h4>{{ data.totalht }} DH</h4>
+                        <h4>{{ data.total }} DH</h4>
                     </div>
-                    <h6 class="text-success">Free shipping</h6>
-                    <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
                 </div>
             </div>
         </div>
