--- a/src/app/Components/Product/list-product/list-product.component.html
+++ b/src/app/Components/Product/list-product/list-product.component.html
@@ -25,7 +25,7 @@
                                 <td class="border-bottom-0">
                                     <div class="email">
                                         <span>{{product.name | titlecase}} </span>
-                                        <span>{{product.description | titlecase}}</span>
+                                        <span>{{product.description | ellipsis:10 | titlecase}}</span>
                                     </div>
                                 </td>
                                 <td class="border-bottom-0">{{product.price | number:'.1-3'}} Dhs</td>
